# Foundry

./: Cargo.toml  lakefile.lean  process_all_projects.sh
.github/workflows/: publish-images.yml
circuits/: langlandsCheck.circom
crates/ace-scn-csc/: Cargo.toml
crates/archivum/crates/archivum-cli/: Cargo.toml
crates/archivum/crates/archivum-cli/src/: main.rs
crates/archivum/crates/archivum-core/: Cargo.toml
crates/archivum/crates/archivum-core/src/: lib.rs
crates/archivum/crates/example-prime/: Cargo.toml
crates/archivum/crates/example-prime/src/: lib.rs
crates/drmm_ir_parser/: Cargo.toml  README.md
crates/drmm_ir_parser/src/: ast.rs  canonical.rs  cli.rs  error.rs  lib.rs  main.rs  parser.rs
crates/drmm_ir_parser/tests/: parser_tests.rs
crates/drmm_ir_parser/tests/invalid/: bad_id.json  missing_version.json
crates/drmm_ir_parser/tests/valid/: identity.json
crates/echo-kernel/: Cargo.toml
crates/gut-pc/: Cargo.toml
crates/lean-sdk/: Cargo.toml
crates/moc/: build.rs
crates/orf/: build.rs
crates/pirtm-tensor/: Cargo.toml
crates/prime-gap-dynamics/: Cargo.toml
crates/prms/: Cargo.toml
crates/riemann-zeta/: Cargo.toml  build.rs
crates/sigma/: build.rs
crates/xi-formal/: Cargo.toml
crates/zmod/: Cargo.toml
docs/: PRODUCTION_GOLIVE_ANNOUNCEMENT.md  The_Foundry_Whitepaper.md  UAC-ANOM-2026-07-12-001.md
docs/adr/: ADR-007-Lean4-Formalization.md  ADR-062-SigmaKernel-Production-Implementation.md  ADR-063-StratifiedGovernance-Production-Implementation.md  ADR-064-MatrixEngine-Production-Implementation.md  ADR-084-Prime-Origin-Tensor-Universe.md  ADR-085-ZMOD-Multiplicity-Tensor-Core-Integration.md  ADR-087-UOR-Primitives-Core-Ontology.md
lean/: ALP.lean  F1Square.lean  MOC.lean  PIRTM.lean  PirtmMocWasm.lean  alp_sorry_manifest.json  lakefile.toml
lean/ACE–SCN-CSC/: AceScnCsc.lean
lean/CRMF/: Resonance.lean
lean/Core/: ADR.lean  Drift.lean  MultiplicityCore.lean  Operators.lean  Spine.lean  lakefile.toml
lean/F1_SQUARE/: RiemannZeta.lean
lean/MOC/: AlmostPurity.lean  Automorphic.lean  Banach.lean  BreuilKisin.lean  CrystallineRep.lean  Density.lean  EtaleCohomology.lean  Execution.lean  Expr.lean  FontaineLaffaille.lean  Fuzzy.lean  GenesisODE.lean  Hensel.lean  Identity.lean  KrullHensel.lean  L_eff_Test.lean  Moonshine.lean  Newton.lean  Ostrowski.lean  Prismatic.lean  PrismaticSite.lean  Resonance.lean  Shimura.lean  ShimuraCohomology.lean  WeightTwo.lean  pAdicHodge.lean
lean/PIRTM/: Agency.lean  Authority.lean  CPIRTM.lean  DRMM.lean  Drift.lean  FinancialTreasury01.lean  Langlands.lean  LegalESI02.lean  PhaseMirrorFormalization.lean  Stability.lean  Transition.lean
lean/UAC/: Circuits.lean  Contracts.lean  EVM.lean  Lean4PolicyKernel.lean  SQD.lean  SedonaSpine.lean  references.bib
lean/adr-governance/: ADR.lean
lean/dynamics/: Quarternion.lean
lean/gated/: lake-manifest.json  lakefile.lean
materia_commons/examples/: resolvent_scan.rs  spectral_bridge.rs
observability/: anomaly_config.json  anomaly_model.pkl  anomaly_monitor.py  test_anomaly_injector.py
phase-mirror-agent/: Cargo.toml
phase-mirror-agent/src/: cnl.rs  crypto.rs  dialogue.rs  drmm_state.rs  lib.rs  main.rs  tools.rs
scripts/: convert_tex_to_lean.sh
sidecar/: package.json
src/: civic.rs  lib.rs  pmat.rs
tests/: integration.rs  l0_invariants.rs  lean_integration.rs  linker_harness.rs  serialization_tests.rs
(+353 files in other folders)
