[workspace]
members = [
    "materia_commons",
    "crates/core",
    "crates/engine",
    "crates/ace-scn-csc",
    "crates/gut-pc",
    "crates/xi-formal",
    "crates/zmod",
    "crates/prms",
    "crates/echo-kernel",
    "crates/resolvent-verify",
    "crates/riemann-zeta",
    "models/ataraxia",
    "models/coding-commander",
    "models/echobraid",
    "models/finton",
    "models/generalist",
    "models/legalese-scopist",
    "models/the-examiner",
    "models/the-genius",
    "models/the-guardian",
    "models/the-publisher"
, "docs/adr/RustADR"]
[package]
name = "multiplicity"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
multiplicity-common = { path = "materia_commons" }
