[package]
name = "phase-mirror-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
axum = { version = "0.7.9", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
lean-sdk = { path = "../crates/lean-sdk" }
once_cell = "1.19"
serde_json = "1.0"
futures-util = "0.3"
ed25519-dalek = "1"
rand = "0.7"
base64 = "0.21"

[[bin]]
name = "phase-mirror-agent"
path = "src/main.rs"
# Note: Rust source code moved to src/main.rs. This Cargo.toml only defines package and dependencies.


