[package]
name = "drmm_ir_parser"
version = "0.1.0"
edition = "2021"
description = "DRMM IR v1.0 reference parser and canonical serializer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
