[package]
name = "archivum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
archivum-core = { version = "0.1.0", path = "../archivum-core" }
blake3 = "1.8.5"
ciborium = "0.2.2"
clap = { version = "4.6.2", features = ["derive"] }
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.150"
wasmtime = "18.0.2"
