[package]
name = "archivum-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
ciborium = "0.2.2"
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.150"
wasmtime = "18.0.2"
