[package]
name = "example-prime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
archivum-guest = { version = "0.1.0", path = "../archivum-guest" }
ciborium = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
[lib]
crate-type = ["cdylib"]
